--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
         <button type="submit"> Predict </button>
         <h2> Purchase Prediction Result </h2>
-        <h3> {{purchase}} </h3>
+        <h3> {{result}} </h3>
 
     </form>
     
